[gd_scene load_steps=2 format=3 uid="uid://6vlqcmafl64u"]

[ext_resource type="Script" uid="uid://tvfut5fspys7" path="res://scenes/CharacterCreation.gd" id="1"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = &"Panel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"Panel"
alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stats will appear here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RandomizeBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Randomize"

[node name="PositiveTraitBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Positive"

[node name="PositiveTraitSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NegativeTraitBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Add Negative"

[node name="ResetBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Reset"

[node name="NegativeTraitSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ConfirmBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Confirm and Continue"

[node name="TraitList" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[b]Traits:[/b] None selected."
autowrap_mode = 2
